Add styles for .card class and transformation in hover state.

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <div class="card-container">
       <div class="card">
         <div class="front">
-          <p>The Egg</p>
+          <h2>The Egg</h2>
         </div>
 
         <div class="back">
-          <p>El Huevo</p>
+          <h2>El Huevo</h2>
         </div>
       </div>
     </div>
