--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <h1>Spanish Vocabulary</h1>
     <div class="card-container">
       <div class="card">
         <div class="front">
@@ -15,6 +16,16 @@
 
         <div class="back">
           <h2>El Huevo</h2>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="front">
+          <h2>The Check</h2>
+        </div>
+
+        <div class="back">
+          <h2>La Cuenta</h2>
         </div>
       </div>
     </div>
