Fix mistake of missing flex-wrap property. Now cards can wrap to the next line instead of getting squished.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,36 @@
           <h2>La Cuenta</h2>
         </div>
       </div>
+
+      <div class="card">
+        <div class="front">
+          <h2>Credit Card</h2>
+        </div>
+
+        <div class="back">
+          <h2>La Tarjeta de Credito</h2>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="front">
+          <h2>To Order</h2>
+        </div>
+
+        <div class="back">
+          <h2>Ordenar</h2>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="front">
+          <h2>Red Wine</h2>
+        </div>
+
+        <div class="back">
+          <h2>Vino Tinto</h2>
+        </div>
+      </div>
     </div>
   </body>
 </html>
