Centered card-container on page.

--- a/index.html
+++ b/index.html
@@ -58,6 +58,16 @@
           <h2>Vino Tinto</h2>
         </div>
       </div>
+
+      <div class="card">
+        <div class="front">
+          <h2>Lettuce</h2>
+        </div>
+
+        <div class="back">
+          <h2>La Lechuga</h2>
+        </div>
+      </div>
     </div>
   </body>
 </html>
