--- a/index.html
+++ b/index.html
@@ -69,5 +69,22 @@
         </div>
       </div>
     </div>
+
+    <section class="animation-container">
+      <div class="box">
+        <div class="plate">
+          <div class="bread-behind">
+            <div class="bread-behind-copy"></div>
+          </div>
+
+          <div class="meat-1"></div>
+          <div class="meat-2"></div>
+          <div class="meat-3"></div>
+          <div class="meat-4"></div>
+          <div class="meat-5"></div>
+          <div class="meat-6"></div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
