Center taco in the middle of its section. Style plate.

--- a/index.html
+++ b/index.html
@@ -70,20 +70,15 @@
       </div>
     </div>
 
+    <!-- ANIMATED CARTOON TACO -->
     <section class="animation-container">
-      <div class="box">
-        <div class="plate">
-          <div class="bread-behind">
-            <div class="bread-behind-copy"></div>
-          </div>
-
-          <div class="meat-1"></div>
-          <div class="meat-2"></div>
-          <div class="meat-3"></div>
-          <div class="meat-4"></div>
-          <div class="meat-5"></div>
-          <div class="meat-6"></div>
-        </div>
+      <div class="taco">
+        <div class="plate"></div>
+        <div class="shell"></div>
+        <div class="lettuce"></div>
+        <div class="meat"></div>
+        <div class="cheese"></div>
+        <div class="tomatoes"></div>
       </div>
     </section>
   </body>
