Align 'learn more' section using grid. Aligned items's content using flexbox.

--- a/index.html
+++ b/index.html
@@ -70,15 +70,32 @@
       </div>
     </div>
 
-    <!-- ANIMATED CARTOON TACO -->
-    <section class="animation-container">
-      <div class="taco">
-        <div class="plate"></div>
-        <div class="shell"></div>
-        <div class="lettuce"></div>
-        <div class="meat"></div>
-        <div class="cheese"></div>
-        <div class="tomatoes"></div>
+    <!-- Learn More Section -->
+    <section class="learn-more-section">
+      <!-- ANIMATED CARTOON TACO -->
+
+      <div class="animation-container">
+        <div class="taco">
+          <div class="plate"></div>
+          <div class="shell"></div>
+          <div class="lettuce"></div>
+          <div class="meat"></div>
+          <div class="cheese"></div>
+          <div class="tomatoes"></div>
+        </div>
+      </div>
+
+      <div class="learn-more-container">
+        <div class="learn-more-text">
+          <h2>Further Your Education!</h2>
+          <p>
+            Our site offers clear explanations, practical exercises, audio
+            practice, and real-life examples to help you build confidence
+            quickly. Whether you're learning for travel, school, or personal
+            growth, you'll find engaging tools to expand your vocabulary, master
+            grammar, and start speaking today.
+          </p>
+        </div>
       </div>
     </section>
   </body>
