Change 'learn more' section to 'did you know' to better fit the cartoon taco. Align taco with text.

--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@
 
       <div class="learn-more-container">
         <div class="learn-more-text">
-          <h2>Further Your Education!</h2>
+          <h2>Did you know?</h2>
           <p>
-            Our site offers clear explanations, practical exercises, audio
-            practice, and real-life examples to help you build confidence
-            quickly. Whether you're learning for travel, school, or personal
-            growth, you'll find engaging tools to expand your vocabulary, master
-            grammar, and start speaking today.
+            Tacos predate the founding of the United States itself. The word
+            "taco" comes from Mexican miners in the 18th century. They would
+            wrap gunpowder in paper to create small explosive charges called
+            "tacos". Later, the word got applied to the folded tortillas with
+            food.
           </p>
         </div>
       </div>
