Add text-shadow to text elements in trivia section for better readability.

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </div>
 
     <!-- Learn More Section -->
-    <section class="learn-more-section">
+    <section class="trivia-section">
       <!-- ANIMATED CARTOON TACO -->
 
       <div class="animation-container">
@@ -85,8 +85,8 @@
         </div>
       </div>
 
-      <div class="learn-more-container">
-        <div class="learn-more-text">
+      <div class="trivia-container">
+        <div class="trivia-text">
           <h2>Did you know?</h2>
           <p>
             Tacos predate the founding of the United States itself. The word
