Add classes for graph section to target the correct elements.

--- a/index.html
+++ b/index.html
@@ -100,5 +100,22 @@
     </section>
 
     <!-- Practice Chart -->
+    <section>
+      <div class="graph-container">
+        <div class="graph">
+          <ul class="week-1">
+            <li class="square" data-value="10"></li>
+            <li class="square" data-value="5"></li>
+            <li class="square" data-value="0"></li>
+          </ul>
+
+          <ul class="week-2">
+            <li class="square" data-value="10"></li>
+            <li class="square" data-value="5"></li>
+            <li class="square" data-value="0"></li>
+          </ul>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
